--- a/index.html
+++ b/index.html
@@ -11,103 +11,89 @@
         #dd{
             display:flex;
             flex-wrap:wrap;
-            justify-content: space-evenly;
             gap:10px;
+            justify-content: space-between;
         }
         #dd li{
-            display:flex;
-            flex-direction: column;
-            gap:5px;
-            justify-content: space-evenly;
-            align-items: center;
-            list-style-type: none;
             width:250px;
-            padding:10px;
             border:1px solid grey;
             border-radius:10px;
+            padding:10px;
+            display:flex;
+            flex-wrap:wrap;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items:center;
         }
     </style>
 </head>
 <body>
     <div>
-        <h2 id="form-title"></h2>
+        <h2 id="form-h2"></h2>
         <form id="form-container" autocomplete="off">
-            <input type="hidden" id="product-id"/> <br/>
-            <label for="title">Title:</label>
-            <input type="text" id="title" required/> <br/>
-            <label for="thumbnail">Thumbnail:</label>
-            <input type="text" id="thumbnail" required/> <br/>
-            <label for="price">Price:</label>
-            <input type="number" id="price" required/> <br/>
+            <input type="hidden" id="products-id" name="products-id"/> <br/>
+
+            <label for="title">TITLE:</label>
+            <input type="text" name="title" id="title" required/> <br/>
+
+            <label for="thumbnail">THUMBNAIL:</label>
+            <input type="text" name="thumbnail" id="thumbnail" required/> <br/>
+
+            <label for="price">PRICE:</label>
+            <input type="text" name="price" id="price" required/> <br/>
+
             <button type="submit">Submit</button>
         </form>
     </div>
     <br/>
     <br/>
     <div>
-        <button onclick="sortByAsc()">sortByAsc</button>
-        <button onclick="sortByDsc()">sortByDsc</button>
-        <button onclick="sortByCategory()">beauty</button>
+        <button onclick="sortByPriceAsc()">sortByPriceAsc</button>
+        <button onclick="sortByPriceDsc()">sortByPriceDsc</button>
     </div>
-    <br/>
-    
-    <div>
-        <h1 id="total"></h1>
-        <ul id="dd"></ul>
-    </div>
-    
+    <h1 id="total"></h1>
+    <ul id="dd"></ul>
     <script>
-         let Products = []
-         const API = async () => {
-            let res = await fetch('https://dummyjson.com/products?limit=250')
+        let Products = []
+        const API = async () => {
+            let res = await fetch('https://dummyjson.com/products?limit=194')
             let data = await res.json()
             Products = data.products 
             genUI(Products)
-         }
-         const genUI = async (data) => {
-           let dd = document.getElementById('dd')
-           dd.innerHTML = ''
-           data.forEach((p,i) => {
-            let newLi = document.createElement('li')
-            newLi.innerHTML = p.title 
-            let newImg = document.createElement('img')
-            newImg.src = p.thumbnail 
-            newImg.style.width = '100px'
-            newLi.appendChild(newImg)
-            let newH4 = document.createElement('h4')
-            newH4.innerHTML = p.price
-            newLi.appendChild(newH4)
-            let delbtn = document.createElement('button')
-            delbtn.innerHTML = 'DEL'
-            delbtn.onclick = () => deleteProduct(i)
-            newLi.appendChild(delbtn)
-            let editBtn = document.createElement('button')
-            editBtn.innerHTML = 'EDIT'
-            editBtn.onclick = () => editButton(i)
-            newLi.appendChild(editBtn)
-            dd.appendChild(newLi)
-           })
-           document.getElementById('total').innerHTML = ` there are of total ${data.length} Products`
-         }
-         API()
+        }
+        const genUI = (data) => {
+          let dd = document.getElementById('dd')
+          dd.innerHTML = ''
+          data.forEach((p,i) => {
+             let newLi = document.createElement('li')
+             newLi.innerHTML = p.title 
+             let newImg = document.createElement('img')
+             newImg.src = p.thumbnail 
+             newImg.style.width = '100px'
+             newLi.appendChild(newImg)
+             let newH4 = document.createElement('h4')
+             newH4.innerHTML = p.price
+             newLi.appendChild(newH4)
+             let delbtn = document.createElement('button')
+             delbtn.innerHTML = 'DEL'
+             delbtn.onclick = () => deleteProduct(i)
+             newLi.appendChild(delbtn)
+             let editBtn = document.createElement('button')
+             editBtn.innerHTML = 'EDIT'
+             editBtn.onclick = () => editProduct(i)
+             newLi.appendChild(editBtn)
+             dd.appendChild(newLi)
+          })
+          document.getElementById('total').innerHTML = ` there are of total ${data.length} Products `
+        }
+        API()
 
-         function deleteProduct(i){
+           function deleteProduct(i){
             Products.splice(i,1)
             genUI(Products)
-         }
+           }
 
-         function sortByDsc(){
-            let res = [...Products].sort((a,b) => {
-                 if(a.price > b.price){
-                    return -1
-                 }else{
-                    return 1
-                 }
-            })
-            genUI(res)
-         }
-
-         function sortByAsc(){
+           function sortByPriceAsc(){
             let res = [...Products].sort((a,b) => {
                  if(a.price > b.price){
                     return 1
@@ -116,41 +102,43 @@
                  }
             })
             genUI(res)
-         }
+           }
 
-         function sortByCategory(){
-            let res = [...Products].filter((p) => {
-                return p.category === 'beauty'
+           function sortByPriceDsc(){
+            let res = [...Products].sort((a,b) => {
+                 if(a.price > b.price){
+                    return -1
+                 }else{
+                    return 1
+                 }
             })
             genUI(res)
-         }
+           }
 
-         document.getElementById('form-container').addEventListener('submit',(e) => {
+           document.getElementById('form-container').addEventListener('submit',(e) => {
             e.preventDefault()
-            let id = document.getElementById('product-id').value
-            let title = document.getElementById('title').value
-            let thumbnail = document.getElementById('thumbnail').value
-            let price = document.getElementById('price').value 
-
-            if(id){
-                Products[id] = {...Products[id],title,price,thumbnail}
+            let id = document.getElementById('products-id').value;
+            let title = document.getElementById('title').value;
+            let thumbnail = document.getElementById('thumbnail').value;
+            let price = document.getElementById('price').value
+            if(Products[id]){
+                Products[id] = {...Products,title,thumbnail,price}
             }else{
                 Products.push({title,thumbnail,price})
             }
             genUI(Products)
-            document.getElementById('product-id').value = ''
-            document.getElementById('form-title').innerHTML = 'ADD PRODUCT'
+            document.getElementById('products-id').value = ''
             document.getElementById('form-container').reset()
-         })
+           })
 
-         function editButton(i){
-            document.getElementById('product-id').value = i
+           function editProduct(i){
+            document.getElementById('products-id').value = i
             document.getElementById('title').value = Products[i].title
-            document.getElementById('thumbnail').value = Products[i].thumbnail 
-            document.getElementById('price').value  = Products[i].price 
-            document.getElementById('form-title').innerHTML = 'EDIT PRODUCT'
+            document.getElementById('thumbnail').value = Products[i].thumbnail
+            document.getElementById('price').value = Products[i].price
+            document.getElementById('form-h2').innerHTML = `EDIT PRODUCT`
+           }
 
-         }
     </script>
 </body>
 </html>
